Rebrand to DiscoLink with new logo and assets
- Rename project from discordlink to discolink/DiscoLink
- Add disco ball inspired logo (SVG)
- Add favicon (SVG)
- Add banner image for README
- Update all references throughout codebase
- Update color scheme to purple/blue gradient
- Deploy to discolink.pages.dev

--- a/packages/templates/blog/src/components/PostCard.astro
+++ b/packages/templates/blog/src/components/PostCard.astro
@@ -1,5 +1,5 @@
 ---
-import { getAvatarUrl } from '../lib/discordlink';
+import { getAvatarUrl } from '../lib/discolink';
 
 export interface Props {
   title: string;
