--- a/packages/templates/blog/src/layouts/BaseLayout.astro
+++ b/packages/templates/blog/src/layouts/BaseLayout.astro
@@ -11,7 +11,7 @@ export interface Props {
 
 const {
   title,
-  description = 'Blog powered by DiscordLink',
+  description = 'Blog powered by DiscoLink',
   canonical,
   image,
   type = 'website',
