--- a/packages/templates/changelog/src/pages/changelog/[slug].astro
+++ b/packages/templates/changelog/src/pages/changelog/[slug].astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro';
-import { getServer, getThreads, getThread } from '../../lib/discordlink';
+import { getServer, getThreads, getThread } from '../../lib/discolink';
 
 export async function getStaticPaths() {
   const threads = await getThreads();
