--- a/packages/www/src/pages/use-cases/blog.astro
+++ b/packages/www/src/pages/use-cases/blog.astro
@@ -4,7 +4,7 @@ import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
 ---
 
-<BaseLayout title="Community Blog - DiscordLink Use Cases">
+<BaseLayout title="Community Blog - DiscoLink Use Cases">
   <Header />
 
   <main>
@@ -68,7 +68,7 @@ import Footer from '../../components/Footer.astro';
           <div class="option">
             <h3>Blog Template</h3>
             <p>Pre-built blog template with post cards, author bios, and table of contents.</p>
-            <pre><code>npx create-discordlink@latest --template blog</code></pre>
+            <pre><code>npx create-discolink@latest --template blog</code></pre>
             <a href="/templates" class="link">View Templates →</a>
           </div>
           <div class="option">
@@ -80,7 +80,7 @@ import Footer from '../../components/Footer.astro';
           <div class="option">
             <h3>Static Export</h3>
             <p>Export blog posts as static HTML with full SEO optimization.</p>
-            <pre><code>discordlink export --server YOUR_ID --template blog --output ./blog</code></pre>
+            <pre><code>discolink export --server YOUR_ID --template blog --output ./blog</code></pre>
             <a href="/docs/cli" class="link">CLI Documentation →</a>
           </div>
         </div>
